--- a/pkp-lib/locale/en_US/manager.xml
+++ b/pkp-lib/locale/en_US/manager.xml
@@ -64,7 +64,8 @@
 	<message key="manager.publication.editorialStage">Editorial</message>
 	<message key="manager.publication.productionStage">Production</message>
 	<message key="manager.publication.emails">Emails</message>
-
+	<message key="manager.publication.submissionDocuments">Submission Documents</message>
+	<message key="manager.publication.libraryDescription"><![CDATA[These files have been prepared as templates and guides for use as part of the <span class="pkp_help_title">Submission Documents</span>.]]></message> 
 	<message key="manager.emails.confirmDelete">Are you sure you want to delete this email template?</message>
 	<message key="manager.emails.confirmReset">Are you sure you want to reset this email template to its default values?</message>
 	<message key="manager.emails.addEmail">Add Email Template</message>
@@ -377,4 +378,14 @@
 	<message key="notification.addedSocialMedia">Social Media Network added.</message>
 	<message key="notification.editedSocialMedia">Social Media Network edited.</message>
 	<message key="notification.removedSocialMedia">Social Media Network removed.</message>
+
+	<!-- Library Files -->
+	<message key="settings.libraryFiles.fileRequired">A library file is required. Please ensure that you have chosen and uploaded a file.</message>
+	<message key="settings.libraryFiles.nameRequired">A name is required for this library file.</message>
+	<message key="settings.libraryFiles.typeRequired">A file type is required for this library file.</message>
+	<message key="settings.libraryFiles.category.contracts">Contracts</message>
+	<message key="settings.libraryFiles.category.marketing">Marketing</message>
+	<message key="settings.libraryFiles.category.permissions">Permissions</message>
+	<message key="settings.libraryFiles.category.reports">Reports</message>
+	<message key="settings.libraryFiles.category.other">Other</message>
 </locale>
