--- a/ojs/locale/en_US/editor.xml
+++ b/ojs/locale/en_US/editor.xml
@@ -118,6 +118,7 @@
 	<message key="editor.navigation.issues">Issues</message>
 	<message key="editor.navigation.futureIssues">Future Issues</message>
 	<message key="grid.action.addIssue">Create Issue</message>
+	<message key="grid.action.viewIssue">View</message>
 	<message key="editor.navigation.issueArchive">Back Issues</message>
 	<message key="editor.article.designateReviewVersion">Designate the original file as the Review Version</message>
 	<message key="editor.article.uploadReviewVersion">Upload a revised Review Version</message>
