--- a/ops/locale/en_US/editor.xml
+++ b/ops/locale/en_US/editor.xml
@@ -226,4 +226,5 @@
 	<message key="editor.article.remove">Remove</message>
 	<message key="editor.article.remove.confirm">Are you sure you wish to remove this article from the issue? The article will be available for scheduling in another issue.</message>
 	<message key="editor.issues.invalidAccessDate">Access date is not valid.</message>
+	<message key="editor.issues.editIssueGalley">Edit Issue Galley</message>
 </locale>
