--- a/ojs/locale/en_US/author.xml
+++ b/ojs/locale/en_US/author.xml
@@ -24,11 +24,11 @@
 	<message key="author.submit.step4">Step 4. Uploading Supplementary Files</message>
 	<message key="author.submit.step4a">Step 4a. Add a Supplementary File</message>
 	<message key="author.submit.step5">Step 5. Confirming the Submission</message>
-	<message key="author.submit.start">1. Start</message>
-	<message key="author.submit.upload">2. Upload Submission</message>
-	<message key="author.submit.metadata">3. Enter Metadata</message>
-	<message key="author.submit.supplementaryFiles">4. Upload Supplementary Files</message>
-	<message key="author.submit.confirmation">5. Confirmation</message>
+	<message key="author.submit.start">Start</message>
+	<message key="author.submit.upload">Upload Submission</message>
+	<message key="author.submit.metadata">Enter Metadata</message>
+	<message key="author.submit.supplementaryFiles">Upload Supplementary Files</message>
+	<message key="author.submit.confirmation">Confirmation</message>
 	<message key="author.submit.cancelSubmission">You can complete this submission at a later date by selecting Active Submissions from the Author home.</message>
 	<message key="author.submit.notAccepting">This journal is not accepting submissions at this time.</message>
 	<message key="author.submit.requestWaiver">Request Waiver</message>
