--- a/ojs/locale/zh_TW/author.xml
+++ b/ojs/locale/zh_TW/author.xml
@@ -23,11 +23,11 @@
 	<message key="author.submit.step4">步驟 4. 上傳補充檔案</message>
 	<message key="author.submit.step4a">步驟 4a. 新增一個補充檔案</message>
 	<message key="author.submit.step5">步驟 5. 確認投稿</message>
-	<message key="author.submit.start">1. 開始</message>
-	<message key="author.submit.upload">2. 上傳稿件</message>
-	<message key="author.submit.metadata">3.  輸入後設資料</message>
-	<message key="author.submit.supplementaryFiles">4. 上傳補充檔案</message>
-	<message key="author.submit.confirmation">5. 確認</message>
+	<message key="author.submit.start">開始</message>
+	<message key="author.submit.upload">上傳稿件</message>
+	<message key="author.submit.metadata">輸入後設資料</message>
+	<message key="author.submit.supplementaryFiles">上傳補充檔案</message>
+	<message key="author.submit.confirmation">確認</message>
 	<message key="author.submit.cancelSubmission">您可以在「作者」角色的使用者首頁中選擇「進行中的稿件」以在稍後任一個時間點完成此投稿程序。</message>
 	<message key="author.submit.notAccepting">這份期刊此時不接受投稿</message>
 	<message key="author.submissions.uploadCopyeditedVersion">上傳校樣編輯過後的版本</message>
