--- a/ojs/locale/hr_HR/author.xml
+++ b/ojs/locale/hr_HR/author.xml
@@ -24,11 +24,11 @@
 	<message key="author.submit.step4">4.korak Postavite dopunsku datoteku</message>
 	<message key="author.submit.step4a">4a.korak Dodajte dopunsku datoteku</message>
 	<message key="author.submit.step5">5.korak Potvrdite prijavu</message>
-	<message key="author.submit.start">1. Početak</message>
-	<message key="author.submit.upload">2. Prilaganje datoteke</message>
-	<message key="author.submit.metadata">3. Metapodaci</message>
-	<message key="author.submit.supplementaryFiles">4. Dopunske datoteke</message>
-	<message key="author.submit.confirmation">5. Potvrda</message>
+	<message key="author.submit.start">Početak</message>
+	<message key="author.submit.upload">Prilaganje datoteke</message>
+	<message key="author.submit.metadata">Metapodaci</message>
+	<message key="author.submit.supplementaryFiles">Dopunske datoteke</message>
+	<message key="author.submit.confirmation">Potvrda</message>
 	<message key="author.submit.cancelSubmission">Ovu prijavu možete dovršiti nekom drugom prilikom ukoliko odaberete Aktivne prijave s autorove naslovne stranice.</message>
 	<message key="author.submit.notAccepting">Ovaj časopis ne prihvaća prijave u ovom trenutku.</message>
 	<message key="author.submit.requestWaiver">Zatražite izuzeće</message>
