--- a/ojs/locale/ja_JP/author.xml
+++ b/ojs/locale/ja_JP/author.xml
@@ -25,11 +25,11 @@
 	<message key="author.submit.step4">ステップ 4. 補足ファイルのアップロード</message>
 	<message key="author.submit.step4a">ステップ 4a. 補足ファイルの追加</message>
 	<message key="author.submit.step5">ステップ 5. 投稿の確認</message>
-	<message key="author.submit.start">1. 開始</message>
-	<message key="author.submit.upload">2. 投稿物アップロード</message>
-	<message key="author.submit.metadata">3. メタデータ入力</message>
-	<message key="author.submit.supplementaryFiles">4. 補足ファイルアップロード</message>
-	<message key="author.submit.confirmation">5. 確認</message>
+	<message key="author.submit.start">開始</message>
+	<message key="author.submit.upload">投稿物アップロード</message>
+	<message key="author.submit.metadata">メタデータ入力</message>
+	<message key="author.submit.supplementaryFiles">補足ファイルアップロード</message>
+	<message key="author.submit.confirmation">確認</message>
 	<message key="author.submit.cancelSubmission">後日、著者のホームページからこの投稿物を選択することにより、この投稿を完了することもできます。</message>
 	<message key="author.submit.notAccepting">この雑誌は現在投稿を受け付けていません。</message>
 	<message key="author.submit.requestWaiver">免除依頼</message>
