--- a/ojs/locale/nl_NL/author.xml
+++ b/ojs/locale/nl_NL/author.xml
@@ -23,9 +23,9 @@
 	<message key="author.submit.step4">Stap 4. Aanvullende bestanden laden</message>
 	<message key="author.submit.step4a">Stap 4a. Een aanvullend bestand toevoegen</message>
 	<message key="author.submit.step5">Stap 5. De inzending bevestigen</message>
-	<message key="author.submit.start">1. Start</message>
-	<message key="author.submit.supplementaryFiles">4. Aanvullende bestanden laden</message>
-	<message key="author.submit.confirmation">5. Bevestiging</message>
+	<message key="author.submit.start">Start</message>
+	<message key="author.submit.supplementaryFiles">Aanvullende bestanden laden</message>
+	<message key="author.submit.confirmation">Bevestiging</message>
 	<message key="author.submit.cancelSubmission">U kunt deze inzending op een later tijdstip voltooien door Actieve inzendingen te kiezen op de homepage voor auteurs.</message>
 	<message key="author.submit.notAccepting">Dit tijdschrift accepteert momenteel geen inzendingen.</message>
 	<message key="author.submit.requestWaiver">Kwijtschelding vragen</message>
@@ -112,8 +112,8 @@
 	<message key="author.submit.authorSubmitLoginMessage">U heeft een account nodig om in te kunnen zenden bij dit tijdschrift. Dit geeft onze redacteuren de mogelijkheid om uw inzendingen te volgen en contact met u op te nemen als de status van uw inzending verandert of als er additionele informatie van u nodig is.</message>
 	<message key="author.submit.step2">Stap 2. De inzending laden</message>
 	<message key="author.submit.step3">Stap 3. De metadata van de inzending invoeren</message>
-	<message key="author.submit.upload">2. Inzending laden</message>
-	<message key="author.submit.metadata">3. Metadata invoeren</message>
+	<message key="author.submit.upload">Inzending laden</message>
+	<message key="author.submit.metadata">Metadata invoeren</message>
 	<message key="author.submissions.queuedReviewSubsequent">In review ronde {$round}</message>
 	<message key="author.submissions.queuedReviewRevisions">In review: revisies gevraagd</message>
 	<message key="author.submit.mustEnterWaiverReason">Als u om kwijtschelding vraagt, moet u een reden opgeven.</message>
